[tool.poetry]
name = "ai-traffic-signal"
version = "0.1.0"
description = "Algorithms and utilities for AI-driven traffic signal and path planning (RRT*, Dijkstra, round-robin)."
authors = ["Subhadip Das <subhadipdas2025@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [ { include = "ai_traffic_signal" } ]
keywords = ["traffic", "rrt", "dijkstra", "networkx", "round-robin"]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "*"
networkx = "*"
matplotlib = "*"
scipy = "*"
scikit-learn = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
twine = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
